--- a/todo-frontend/src/App.scss
+++ b/todo-frontend/src/App.scss
@@ -1,5 +1,6 @@
 h1 {
   color: red;
+  font-size: 58px;
 }
 
 h3 {
@@ -23,8 +24,13 @@ h3 {
   width: 50vw;
   border: 2px solid red;
   margin-bottom: 48px;
-  input {
-    width: 100%;
-    height: 50px;
-  }
+}
+
+.todo-list {
+  margin-top: 60px;
+}
+
+.input {
+  width: 100%;
+  font-size: 48px !important;
 }
