--- a/todo-frontend/src/App.scss
+++ b/todo-frontend/src/App.scss
@@ -1,36 +1,83 @@
 h1 {
-  color: red;
+  color: black;
   font-size: 58px;
 }
 
 h3 {
-  color: green;
+  color: rgb(40, 40, 40);
+  font-size: 22px;
 }
 
 .task-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
+  padding: 0px 28px;
+  border-radius: 14px;
+  background: #e0e0e0;
+  box-shadow: 5px 5px 22px #cacaca, -5px -5px 22px #f6f6f6;
 }
 .main-container {
   margin: auto;
   width: 50vw;
-  border: 2px solid red;
-  margin-bottom: 48px;
+
+  margin-bottom: 108px;
 }
 
 .form-container {
   margin: auto;
   width: 50vw;
-  border: 2px solid red;
-  margin-bottom: 48px;
+  margin-bottom: 58px;
 }
 
 .todo-list {
-  margin-top: 60px;
+  padding-top: 60px;
+  background-color: #e0e0e0;
 }
 
 .input {
   width: 100%;
+  height: 100%;
   font-size: 48px !important;
+  background-color: white;
+  border-radius: 14px;
+  background: #ffffff;
+  box-shadow: 5px 5px 22px #cacaca, -5px -5px 22px #f6f6f6;
+  margin-bottom: 100px;
+}
+
+.subtask-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 48px;
+  // background-color: white;
+  background: rgb(220, 220, 220);
+  border-radius: 14px;
+  background: #e0e0e0;
+  box-shadow: 5px 5px 22px #cacaca, -5px -5px 22px #f6f6f6;
+}
+
+.login-container {
+  color: white;
+  background-color: #1d2b30;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 30vw;
+  .login-feild {
+    width: 100%;
+    background-color: white;
+  }
 }
